--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "node tests/index.js"
+    "test": "node test/index.js"
   },
   "repository": {
     "type": "git",
